language/move-lang/tests/move_check/expansion/friend_decl_aliased_duplicates.exp
error: 

   ┌── tests/move_check/expansion/friend_decl_aliased_duplicates.move:7:5 ───
   │
 7 │     friend AliasedA;
   │     ^^^^^^^^^^^^^^^^ Duplicate friend declaration '0x42::A'. Friend declarations in a module must be unique
   ·
 6 │     friend 0x42::A;
   │            ------- Previously declared here
   │

